# Hospital-Equipment-Tracker

backend/: .env.example  .gitignore  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
